# gogoo-panel-myzone

./: .anjuta_sym_db.db  .project  CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac  penge.pc.in
autom4te.cache/: output.0  requests  traces.0  traces.1
capplet/: CMakeLists.txt  Makefile.in  myzone-cc-panel.c
data/: CMakeLists.txt  Makefile.in  gogoo-panel-myzone.desktop.in  meego-panel-myzone.schemas.in
data/theme/: CMakeLists.txt  Makefile.in
mailme/: CMakeLists.txt  Makefile.in
penge/: CMakeLists.txt  Makefile.in  penge-app-tile.c  penge-apps-pane.c  penge-calendar-pane.c  penge-count-tile.c  penge-email-pane.c  penge-event-tile.c  penge-event-tile.c~  penge-events-pane.c  penge-events-pane.c~  penge-everything-pane.c  penge-grid-view.c  penge-interesting-tile.c  penge-people-tile.c  penge-recent-file-tile.c  penge-task-tile.c  penge-tasks-pane.c  penge-utils.c  penge-welcome-tile.c
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.myzone.service.in  meego-panel-myzone.c
